Fix for shifting menu.

--- a/media/scss/style-newui.scss
+++ b/media/scss/style-newui.scss
@@ -102,7 +102,7 @@ table.main {
     float: right;
     .btn {
         font-size: 8pt;
-        margin: 0 0 0 5px;
+        margin: 0 0 0 10px;
     }
 } 
 
@@ -140,7 +140,7 @@ table.main {
 .btn.help {
     background: #ffa500;
     border: 1px solid #ffa500;
-    content: $white;
+    color: $white;
     &:hover {
         background: #FFFFFF;
         color: #ffa500;
@@ -230,6 +230,7 @@ table.main {
     position: relative;
     margin-bottom: 5px;
     color: $primaryColor;
+    float: left;
     &:hover {
         ul {
             display: block;
@@ -239,7 +240,7 @@ table.main {
         line-height: 1.5;
         position: absolute;
         top: -7px;
-        right: -6px;
+        right: -11px;
         background-color: #FFF;
         border: 1px solid #069;
         padding: 5px 10px;
